updates to lecture and adding exercises

--- a/week-11-lecture-pandas.ipynb
+++ b/week-11-lecture-pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 11 - Pandas\n",
+    "# Week 11 Lecture - Pandas\n",
     "\n",
     "## Today's Topics\n",
     "\n",
@@ -19,13 +19,14 @@
    "source": [
     "## What is Pandas \n",
     "\n",
+    "![Panda trashing an office](https://media.giphy.com/media/EPcvhM28ER9XW/giphy.gif)\n",
+    "\n",
     "* Pandas is a 3rd-party library for doing data analysis\n",
     "* It is a foundational component of Python data science\n",
     "* Developed by [Wes McKinney](http://wesmckinney.com/pages/about.html) while working in the finance industry, so it has some...warts\n",
     "* Vanilla Python (what we did previously) can do many of the same things, but Pandas does them *faster* and usually in fewer lines of code\n",
     "* To do this, is built on top of another 3rd party library called [numpy](http://www.numpy.org/)\n",
-    "    * If you have TONS of numerical data you can use Numpy directly\n",
-    "* Pandas gives Python some R like functionality (Dataframes)"
+    "    * If you have TONS of numerical data you can use Numpy directly\n"
    ]
   },
   {
@@ -35,12 +36,12 @@
     "## Why Pandas?\n",
     "\n",
     "* Pandas provides a powerful set of data structure and functions for working with data.\n",
+    "    * Namely DataFrames\n",
     "* Once you learn these structures and functions (which takes time) you can begin to quickly ask questions and get answers from data.\n",
     "* Pandas integrates nicely with other libraries in the Python data science ecosysem like:\n",
     "    * [Jupyter Notebooks](http://jupyter.org/) - pretty display of Dataframes as HTML tables\n",
     "    * [Matplotlib](https://matplotlib.org/) - Easy plotting from Dataframes\n",
-    "    * [Scikit Learn](http://scikit-learn.org/stable/) - Integrates with the machine learning api\n",
-    "\n"
+    "    * [Scikit Learn](http://scikit-learn.org/stable/) - Integrates with the machine learning api"
    ]
   },
   {
@@ -68,10 +69,10 @@
    "source": [
     "## Introduction to Pandas Data Structures\n",
     "\n",
-    "* To understand Pandas, which is hard, it is helpful to start the data structures it adds to Python:\n",
-    "    * Series - For one dimensional data (lists) \n",
-    "    * Dataframe - For two dimensional data (spreadsheets)\n",
-    "    * Index - For naming, selecting, and transforming data within a Pandas Series or Dataframe (column and row names)"
+    "* To understand Pandas it is helpful to start the data structures it adds to Python:\n",
+    "    * **Series** - For one dimensional data (lists) \n",
+    "    * **Dataframe** - For two dimensional data (spreadsheets)\n",
+    "    * **Index** - For naming, selecting, and transforming data within a Pandas Series or Dataframe (column and row names)"
    ]
   },
   {
@@ -100,6 +101,7 @@
    "source": [
     "# creating a series using the top-level pandas function\n",
     "# Put the cursor inside the parentheses and hit shift-enter\n",
+    "# to see the documentation\n",
     "pd.Series()"
    ]
   },
@@ -164,7 +166,7 @@
    "metadata": {},
    "source": [
     "#### Quick Exercise\n",
-    "* How might we grab the *last* element if we didn't know the length of the list?"
+    "* How might we grab the *last* element if we didn't know the length?"
    ]
   },
   {
@@ -319,7 +321,7 @@
     "\n",
     "* Try slicing this series, but with names instead of numbers!\n",
     "* Select a subset of the data using the Python slicing notation\n",
-    "* Don't forget, use `loc`!"
+    "* Don't forget, use `loc` with names and `iloc` with numbers"
    ]
   },
   {
@@ -358,10 +360,10 @@
    "source": [
     "## DataFrame\n",
     "\n",
-    "* `DataFrames` are the real workhorse of Pandas and Python Data Science\n",
+    "* *DataFrames* are the real workhorse of Pandas and Python Data Science\n",
     "* We will be spending a lot of time with data inside of Dataframes, so buckle up!\n",
-    "* `DataFrames` contain two-dimensional data, just like an Excel spreadsheet\n",
-    "* In practice, a `DataFrame` is a bunch of `Series` lined up next to each other"
+    "* DataFrames contain two-dimensional data, just like an Excel spreadsheet\n",
+    "* In practice, a DataFrame is a bunch of Series lined up next to each other"
    ]
   },
   {
@@ -408,7 +410,15 @@
     "# Create a dictionary with a key:value for each column\n",
     "state_info_dictionary = {'population': population,\n",
     "                       'area': area}\n",
-    "\n",
+    "state_info_dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now mash them together into a DataFrame\n",
     "states = pd.DataFrame(state_info_dictionary)\n",
     "# Display the data\n",
@@ -526,7 +536,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* You need to pass the Dataframe a list of column names"
+    "* Why didn't that work!?\n",
+    "* You need to pass the Dataframe a *list of column names*"
    ]
   },
   {
@@ -735,16 +746,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load pandas\n",
-    "import pandas as pd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -848,7 +849,363 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Frame Methods"
+    "## Data Analysis & Manipulation\n",
+    "\n",
+    "* Pandas is popular because it makes doing computation over large amounts of data very quick and easy\n",
+    "* However, it requires you to set aside some of what you have learned about data processing using vanilla python\n",
+    "    * Less loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computing on Columns\n",
+    "\n",
+    "* You can use mathematical operations to quickly do computations on your data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display the states dataframe\n",
+    "states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Increase the population by 25%\n",
+    "states[\"population\"] * 1.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the density of each state\n",
+    "states['population'] /  states['area']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the result to a new column labeled \"density\"\n",
+    "states['density'] =  states['population']\n",
+    "states"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Look ma! No loops!\n",
+    "* When your data is in Pandas, it will *vectorize* the computations\n",
+    "    * Column centric vs. row cenric (i.e. looping in Python)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Descriptive Statistics\n",
+    "\n",
+    "* Pandas provides some basic statistical tools for doing math\n",
+    "* But it is not a robust statistical library\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute the mean of the population\n",
+    "states[\"population\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute the max of the area\n",
+    "states[\"area\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute the min of all numerical columns\n",
+    "states.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute all the descriptive statistics on numerical columns\n",
+    "states.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vectorized String Operations\n",
+    "\n",
+    "* This column centric approach can be used with string methods\n",
+    "* The `str` *accessor* provides access to a bunch of *string methods* \n",
+    "\n",
+    "|Functions  | |  | |\n",
+    "|-------------|------------------|------------------|------------------|\n",
+    "|``len()``    | ``lower()``      | ``translate()``  | ``islower()``    | \n",
+    "|``ljust()``  | ``upper()``      | ``startswith()`` | ``isupper()``    | \n",
+    "|``rjust()``  | ``find()``       | ``endswith()``   | ``isnumeric()``  | \n",
+    "|``center()`` | ``rfind()``      | ``isalnum()``    | ``isdecimal()``  | \n",
+    "|``zfill()``  | ``index()``      | ``isalpha()``    | ``split()``      | \n",
+    "|``strip()``  | ``rindex()``     | ``isdigit()``    | ``rsplit()``     | \n",
+    "|``rstrip()`` | ``capitalize()`` | ``isspace()``    | ``partition()``  | \n",
+    "|``lstrip()`` |  ``swapcase()``  |  ``istitle()``   | ``rpartition()`` |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleaning data with vanilla python\n",
+    "data = ['peter', 'Paul', 'MARY', 'gUIDO']\n",
+    "\n",
+    "for s in data:\n",
+    "    print(s.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* But this breaks very easily with missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put some dirty data in our list\n",
+    "data = ['peter', 'Paul', None, 'MARY', 'gUIDO']\n",
+    "\n",
+    "for s in data:\n",
+    "    print(s.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert our list into a Series\n",
+    "names = pd.Series(data)\n",
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the string vector function to capitalize everything\n",
+    "names.str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Now we are rocking!\n",
+    "\n",
+    "![Panda is rocking](https://media.giphy.com/media/Hs6f36KUBjWww/giphy.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The vectorized operations are handy when you have a lot of data or you are doing complicated operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display the dog data\n",
+    "dogs_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Capitalize the DogName column\n",
+    "dogs_data[\"DogName\"].str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What is the dog with the longest name?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute the length of all the dog names\n",
+    "dog_lenths = dogs_data[\"DogName\"].str.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the length of the longest dog name\n",
+    "dog_lenths.max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* That tells us the length of the longest dog name, but how can we get the name?\n",
+    "* Use the `idxmax()` math function to get the ID "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the row ID of the longest dog name\n",
+    "dog_lenths.idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the index from dog_lenths to retrieve the full entry\n",
+    "dogs_data.iloc[dog_lenths.idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* You can do some advanced data cleaning and manipulation with the string operations. \n",
+    "* The [Pandas tutorial has some useful tips for working with text](https://pandas.pydata.org/docs/getting_started/intro_tutorials/10_text_data.html#how-to-manipulate-textual-data)\n",
+    "* Let's create a new column to indicate the sex of each dog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the License type string into a list of words\n",
+    "dogs_data[\"LicenseType\"].str.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Now what we get is a series where each element is a list\n",
+    "* What we want is the last item in the list of lists\n",
+    "    * And we don't want to loop\n",
+    "* With the string methods we need do so some special indexing to reach the last item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the last item in the list of words in the LicenseType colum\n",
+    "dogs_data[\"LicenseType\"].str.split().str.get(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new column called \"Sex\" with just the sex of each dog\n",
+    "dogs_data[\"Sex\"] = dogs_data[\"LicenseType\"].str.split().str.get(-1)\n",
+    "dogs_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Histogramming\n",
+    "\n",
+    "* You can use histograms, that is, a one-dimensional array of the counts of the unique values in your data\n",
+    "* This can be helpful for finding dirty data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dogs_data[\"Sex\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Interesting, looks like there were some data entry issues in the LicenseType field"
    ]
   },
   {
@@ -866,6 +1223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Count the breed values and display the first 10 entries\n",
     "dogs_data[\"Breed\"].value_counts().head(10)"
    ]
   },
@@ -875,31 +1233,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What is the most popular dog name\n",
     "dogs_data[\"DogName\"].value_counts().head(10)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dogs_data[\"Color\"].value_counts().head(10)"
+    "* This is just a small taste of all the data analysis techniques you can do with Pandas"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -966,6 +1309,20 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Panda slide](https://media.giphy.com/media/TObbUke0z8Mo/giphy.gif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
